Added save button zipfile name now varies depending on the mod name and version. Spaces are replaced by underscores.

--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
 <body>
   <div class="container-fluid">
     <h1 id="name">Mindustry Mod Creator</h1><h6>By Paulao17</h6>
+    <button type="button" class="btn btn-primary" onclick="saveMod()">Save to zip</button>
     <input type="file" id="files" name="files[]" multiple />
     <output id="list"></output>
 
