--- a/main.html
+++ b/main.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  
+    <!--Repo owner should create a "favicon" folder with this (or a different) image in it for offline access-->
+  <link rel="icon" type="image/x-icon" href="https://github.com/Anuken/Mindustry/blob/master/core/assets-raw/sprites/teams/team-derelict.png"link>
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
